UI functionality script and extra styling

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title></title>
+  <title>TODO Application</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
@@ -20,20 +20,10 @@
     <div class="column">
       <div class="title">
         <h1>TODO List</h1>
-        <button>+</button>
+        <button id="new-todo">+</button>
       </div>
-      <ul class="list">
-        <li class="reminder">
-          <span>This is a todo</span>
-          <div class="actions">
-            <button class="btn-check">
-              <span class="material-icons">check_circle_outline</span>
-            </button>
-            <button class="btn-delete">
-              <span class="material-icons">delete</span>
-            </button>
-          </div>
-        </li>
+      <ul class="list" id="todo-list">
+        <!-- Enter a todo -->
       </ul>
     </div>
   </div>
